Improve tree-sitter grammar: coverage now 52.5% (363/691 files)
Changes:
- Add support for empty array creation: new Type[]

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>